list all states

--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,9 +6,9 @@
     <BODY>
         <H1>States</H1>
         <UL>
-            {% for obj in value %}
-            <LI> {{ obj.id }} <B>{{ obj.name }}</B></LI>
-            {% endfor %}
+        {% for obj in data %}
+            <LI> {{ obj }} <B>{{ obj }}</B></LI>
+        {% endfor %}
         </UL>
     </BODY>
 </HTML>
