--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,8 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for obj in data %}
-            <LI> {{ obj }} <B>{{ obj }}</B></LI>
+            {% for state in states|sort(attribute="name") %}
+            <LI> {{ state.id }} <B>{{ state.name }}</B></LI>
         {% endfor %}
         </UL>
     </BODY>
