--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,7 +4,9 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if cities %}
+	{% if not state_name %}
+	<H1>Not found!</H1>
+        {% elif cities  %}
             <H1>State: {{ state_name }}</H1>
             <H3>Cities:</H3>
             <UL>
